# pipeaggrot

./: .gitignore  README.md  input.txt
cppsrc/: CMakeLists.txt  Combo_class.cpp  Combo_class.hpp  a.out  calcvisc.cpp  combo.cpp  combo.hpp  dist_combo.hpp  input.txt  io.cpp  io.hpp  main.cpp  main_velo.cpp  makefile  orientation.cpp  orientation.hpp  orientation_control_vol.cpp  orientation_control_vol.hpp  orientation_control_vol_acorrected.cpp  point.cpp  point.hpp  runscript_layout.sh  triple.hpp  velo.cpp  velo.hpp
doc/: main.md  point.md
pysrc/: animtest.py  dist_plot.py  veloplot.py  visco_plot.py  viscoraw_plot.py
